# airflow-prac

./: compose.yaml  pyproject.toml  restart-airflow.sh
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: init_and_deploy.yaml
dags/: 01-empty-operator.py  02-email-operator.py  03-python-operator.py  04-preprocess_workflow.py  05-preprocess_workflow.py  assignment.py
data/logs/: log1.txt  log2.txt
experiments/: insert_to_db.py  read_logs.py
plugins/common/: insert_to_db.py  preprocess_logs.py  read_logs.py
